...
                android:textColor="@color/textPrimary"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_marginBottom="8dp" />

            <EditText
                android:id="@+id/etRegOpen"
                style="@style/Widget.CodeBase.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Select date"
                android:focusable="false"
                android:cursorVisible="false" />
...
                android:textColor="@color/textPrimary"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_marginBottom="8dp" />

            <EditText
                android:id="@+id/etRegClose"
                style="@style/Widget.CodeBase.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Select date"
                android:focusable="false"
                android:cursorVisible="false" />
...
