...
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="22dp">

        <Button
            android:id="@+id/btnContinue"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:text="CONTINUE"
            android:backgroundTint="@color/primaryAccent"
            android:textColor="@color/white"
            android:textSize="12sp"
...
